Fixed inconsistent spacing and box shadow bug caused by flicker fix

--- a/waters-aem-frontend/src/styles/navigation.scss
+++ b/waters-aem-frontend/src/styles/navigation.scss
@@ -38,17 +38,21 @@ nav.cmp-navigation {
    height: inherit;
 
    &::after {
-       width: 100%;
+       width: 102.5%;
        height: 67px;
        content: '';
        position: absolute;
-       box-shadow: $shadow; 
-       left: 0;
+       box-shadow: none; 
+       left: -1.25%;
        top: 0;
        z-index: 1000;
        visibility: hidden;
        background: none;
        pointer-events: none;
+   }
+
+   &.cmp-navigation--shadow::after {
+       box-shadow: 0px 15px 5px -15px rgba(79, 91, 100, 0.2); 
    }
 
    &:hover {
@@ -86,7 +90,7 @@ nav.cmp-navigation {
                margin-bottom: -18px;
                position: relative;
                left: 100%;
-               width: 3.3em;
+               margin-right: -3.3em;
                max-width: 3.3em;
             }
          }
